[package]
name = "game-platform"
version = "0.1.0"
authors = ["Aniket"]
edition = "2021"

[dependencies]
async-graphql = "=7.0.17"
async-graphql-value = "=7.0.17"
futures = "0.3"
hex = "0.4"
linera-sdk = "0.15.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcs = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
linera-sdk = { version = "0.15.8", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[dev-dependencies]
linera-sdk = { version = "0.15.8", features = ["test"] }

[[bin]]
name = "game_platform_contract"
path = "src/contract.rs"

[[bin]]
name = "game_platform_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
